fixed horizontal expansion on mobile

--- a/src/styles/Slide.css
+++ b/src/styles/Slide.css
@@ -3,3 +3,10 @@
   width: 100%;
   height: 100%;
 }
+
+@media only screen and (max-width: 690px) {
+  
+  .slide p {
+    padding: 0 10px 0 10px;
+  }
+}
